Blog: align right img fix

--- a/wp-content/themes/gfw-blog/scss/_content.scss
+++ b/wp-content/themes/gfw-blog/scss/_content.scss
@@ -561,9 +561,9 @@ object {
 }
 
 img.alignright {
-  float: right;
-  margin-right: -80px;
-  padding-left: 30px;
+  // float: right;
+  // margin-right: -80px;
+  // padding-left: 30px;
   padding-bottom: 20px;
   background: #FFF;
   @media (max-width: 480px) {
